# type-level-sets

./: .gitignore  README  README.md  TySet.hs  changelog  changelog.md  example-new.hs  example-set.hs  example.hs  example2.hs  memory.json  stack.yaml  type-level-sets.cabal
.github/workflows/: ci.yml  hackage.yml  repo-assist.lock.yml  repo-assist.md
examples/: Example.hs  Example2.hs  ExampleMap.hs  ExampleSet.hs  ExampleSet2.hs  example.hs  example2.hs
src/Data/Type/: Map.hs  Set.hs
src/Data/Type/Functor/: Map.hs
src/Data/Type/Map/: Internal.hs
tests/hspec/: MapSpec.hs  SetSpec.hs
